// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generateAutoIndexes > should generate all indexes for deleteDate + expiryDate + version 1`] = `
[
  {
    "concurrent": false,
    "include": null,
    "keys": [
      {
        "direction": "asc",
        "key": "id",
        "nulls": null,
      },
      {
        "direction": "asc",
        "key": "deletedAt",
        "nulls": null,
      },
    ],
    "name": null,
    "sparse": false,
    "unique": false,
    "using": null,
    "where": null,
    "with": null,
  },
  {
    "concurrent": false,
    "include": null,
    "keys": [
      {
        "direction": "asc",
        "key": "id",
        "nulls": null,
      },
      {
        "direction": "asc",
        "key": "deletedAt",
        "nulls": null,
      },
      {
        "direction": "asc",
        "key": "expiresAt",
        "nulls": null,
      },
    ],
    "name": null,
    "sparse": false,
    "unique": false,
    "using": null,
    "where": null,
    "with": null,
  },
  {
    "concurrent": false,
    "include": null,
    "keys": [
      {
        "direction": "asc",
        "key": "id",
        "nulls": null,
      },
      {
        "direction": "asc",
        "key": "deletedAt",
        "nulls": null,
      },
      {
        "direction": "asc",
        "key": "version",
        "nulls": null,
      },
    ],
    "name": null,
    "sparse": false,
    "unique": false,
    "using": null,
    "where": null,
    "with": null,
  },
  {
    "concurrent": false,
    "include": null,
    "keys": [
      {
        "direction": "asc",
        "key": "id",
        "nulls": null,
      },
      {
        "direction": "asc",
        "key": "deletedAt",
        "nulls": null,
      },
      {
        "direction": "asc",
        "key": "expiresAt",
        "nulls": null,
      },
      {
        "direction": "asc",
        "key": "version",
        "nulls": null,
      },
    ],
    "name": null,
    "sparse": false,
    "unique": false,
    "using": null,
    "where": null,
    "with": null,
  },
  {
    "concurrent": false,
    "include": null,
    "keys": [
      {
        "direction": "asc",
        "key": "id",
        "nulls": null,
      },
      {
        "direction": "asc",
        "key": "version",
        "nulls": null,
      },
    ],
    "name": null,
    "sparse": false,
    "unique": false,
    "using": null,
    "where": null,
    "with": null,
  },
]
`;

exports[`generateAutoIndexes > should generate all indexes for deleteDate + expiryDate 1`] = `
[
  {
    "concurrent": false,
    "include": null,
    "keys": [
      {
        "direction": "asc",
        "key": "id",
        "nulls": null,
      },
      {
        "direction": "asc",
        "key": "deletedAt",
        "nulls": null,
      },
    ],
    "name": null,
    "sparse": false,
    "unique": false,
    "using": null,
    "where": null,
    "with": null,
  },
  {
    "concurrent": false,
    "include": null,
    "keys": [
      {
        "direction": "asc",
        "key": "id",
        "nulls": null,
      },
      {
        "direction": "asc",
        "key": "deletedAt",
        "nulls": null,
      },
      {
        "direction": "asc",
        "key": "expiresAt",
        "nulls": null,
      },
    ],
    "name": null,
    "sparse": false,
    "unique": false,
    "using": null,
    "where": null,
    "with": null,
  },
]
`;

exports[`generateAutoIndexes > should generate all indexes for deleteDate + version 1`] = `
[
  {
    "concurrent": false,
    "include": null,
    "keys": [
      {
        "direction": "asc",
        "key": "id",
        "nulls": null,
      },
      {
        "direction": "asc",
        "key": "deletedAt",
        "nulls": null,
      },
    ],
    "name": null,
    "sparse": false,
    "unique": false,
    "using": null,
    "where": null,
    "with": null,
  },
  {
    "concurrent": false,
    "include": null,
    "keys": [
      {
        "direction": "asc",
        "key": "id",
        "nulls": null,
      },
      {
        "direction": "asc",
        "key": "deletedAt",
        "nulls": null,
      },
      {
        "direction": "asc",
        "key": "version",
        "nulls": null,
      },
    ],
    "name": null,
    "sparse": false,
    "unique": false,
    "using": null,
    "where": null,
    "with": null,
  },
  {
    "concurrent": false,
    "include": null,
    "keys": [
      {
        "direction": "asc",
        "key": "id",
        "nulls": null,
      },
      {
        "direction": "asc",
        "key": "version",
        "nulls": null,
      },
    ],
    "name": null,
    "sparse": false,
    "unique": false,
    "using": null,
    "where": null,
    "with": null,
  },
]
`;

exports[`generateAutoIndexes > should generate deleteDate index when DeleteDate present 1`] = `
[
  {
    "concurrent": false,
    "include": null,
    "keys": [
      {
        "direction": "asc",
        "key": "id",
        "nulls": null,
      },
      {
        "direction": "asc",
        "key": "deletedAt",
        "nulls": null,
      },
    ],
    "name": null,
    "sparse": false,
    "unique": false,
    "using": null,
    "where": null,
    "with": null,
  },
]
`;

exports[`generateAutoIndexes > should generate scope index when Scope present 1`] = `
[
  {
    "concurrent": false,
    "include": null,
    "keys": [
      {
        "direction": "asc",
        "key": "id",
        "nulls": null,
      },
      {
        "direction": "asc",
        "key": "tenantId",
        "nulls": null,
      },
    ],
    "name": null,
    "sparse": false,
    "unique": false,
    "using": null,
    "where": null,
    "with": null,
  },
]
`;

exports[`generateAutoIndexes > should generate unique version index when version keys exist 1`] = `
[
  {
    "concurrent": false,
    "include": null,
    "keys": [
      {
        "direction": "asc",
        "key": "id",
        "nulls": null,
      },
      {
        "direction": "asc",
        "key": "version",
        "nulls": null,
      },
    ],
    "name": null,
    "sparse": false,
    "unique": true,
    "using": null,
    "where": null,
    "with": null,
  },
]
`;

exports[`generateAutoIndexes > should generate version index when Version present 1`] = `
[
  {
    "concurrent": false,
    "include": null,
    "keys": [
      {
        "direction": "asc",
        "key": "id",
        "nulls": null,
      },
      {
        "direction": "asc",
        "key": "version",
        "nulls": null,
      },
    ],
    "name": null,
    "sparse": false,
    "unique": false,
    "using": null,
    "where": null,
    "with": null,
  },
]
`;

exports[`generateAutoIndexes > should generate versionStart + versionEnd index when both present 1`] = `
[
  {
    "concurrent": false,
    "include": null,
    "keys": [
      {
        "direction": "asc",
        "key": "id",
        "nulls": null,
      },
      {
        "direction": "asc",
        "key": "startAt",
        "nulls": null,
      },
    ],
    "name": null,
    "sparse": false,
    "unique": false,
    "using": null,
    "where": null,
    "with": null,
  },
  {
    "concurrent": false,
    "include": null,
    "keys": [
      {
        "direction": "asc",
        "key": "id",
        "nulls": null,
      },
      {
        "direction": "asc",
        "key": "startAt",
        "nulls": null,
      },
      {
        "direction": "asc",
        "key": "endAt",
        "nulls": null,
      },
    ],
    "name": null,
    "sparse": false,
    "unique": false,
    "using": null,
    "where": null,
    "with": null,
  },
]
`;

exports[`generateAutoIndexes > should generate versionStartDate index when VersionStartDate present 1`] = `
[
  {
    "concurrent": false,
    "include": null,
    "keys": [
      {
        "direction": "asc",
        "key": "id",
        "nulls": null,
      },
      {
        "direction": "asc",
        "key": "startAt",
        "nulls": null,
      },
    ],
    "name": null,
    "sparse": false,
    "unique": false,
    "using": null,
    "where": null,
    "with": null,
  },
]
`;
